methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:1: error: not found: type Booleean
var vuBiscuit:Booleean =true
              ^