methods.returning.MethodsReturning.scala.code
var vuBiscuit:Booleean =true





def haveBaggle():Boolean = {
  for (k<-1 to 6 ){
    avance()
  								}
    if (estSurBiscuit() == true){
    for (k<-1 to 6){
      recule()
    														}
   	return true
  						
													}
  else {
    for (k<-1 to 6){
      recule()
    								}
    droite()
    avance()
    gauche()
      
     return false
    		}
}